Disable scroll anchoring is an element within the scroll changes its in-flow state

BUG=641814

Review-Url: https://codereview.chromium.org/2310223002
Cr-Commit-Position: refs/heads/master@{#417077}

Former-commit-id: a6268a949ace32beb1ac82409aa551d1b135dd92